--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fashion landing page project",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch scss/global.scss styles.css"
   },
   "author": "Tahaberk SOYSAL",
   "license": "ISC"
