--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
     "sass": "sass --watch scss/global.scss styles.css"
   },
   "author": "Tahaberk SOYSAL",
-  "license": "ISC",
-  "devDependencies": {
-    "video.js": "^8.10.0"
-  }
+  "license": "ISC"
 }
